# cpp_adventure

./: CMakeLists.txt  README.md  cpp_tricks.md  list_op.cpp  main.c  trick_test  trick_test.cpp  trick_test_1.cpp
binder_adventure/client/: BpSimpleFunc.cpp  BpSimpleFunc.h  SimpleBinderClient.cpp
binder_adventure/server/: BnSimpleFunc.cpp  BnSimpleFunc.h  DeathNotifier.cpp  DeathNotifier.h  ISimpleFunc.h  SimpleServer.cpp  SimpleServer.h
native_looper/: README.md
native_looper/include/: ABase.h  ABuffer.h  AHandler.h  AHandlerReflector.h  ALoopeRoster.h  ALooper.h  AMessage.h  AString.h  AStringUtils.h  Condition.h  Errors.h  Mutex.h  SharedBuffer.h  String16.h  String8.h  Thread.h  ThreadDefs.h  Timers.h  TypeHelpers.h  Unicode.h
native_looper/src/: ALooper.cpp  AMessage.cpp  AStringUtils.cpp  SharedBuffer.cpp  String16.cpp  String8.cpp  Thread.cpp  Timers.cpp  Unicode.cpp  sched_policy.c
native_looper/test/: NativeLooperTest.cpp
src/: BCDConverter.cpp  CircleBuf.cpp  CircleBuf.h  CircleBufTest.cpp  ClsTemplateTest.cpp  DataParser.cpp  DevOp.cpp  DiveOverriding.cpp  DumpUCharArr.cpp  FormatIPAddress.cpp  GBKEncoder2.cpp  IOMultiplex.cpp  Int2Str.cpp  JT1078CircleBuffer.cpp  JT1078CircleBuffer.h  ListOp.cpp  ListOp2.cpp  ListOp3.cpp  LocRef.cpp  Log.h  QueueWaitTimeoutHandler.cpp  ReadFileTest.cpp  ReallocTest.cpp  RefTest.cpp  RtpSend.cpp  RtpSend.h  ScanfTest.cpp  SimpleCal.cpp  SimpleTcpServer.c  SimpleTest.cpp  SplitArr.cpp  StaticMemberFuncOp.cpp  StrVec  StrVec.cpp  TimeoutHandler.cpp  TimeoutHandlerBySignal.cpp  VariableArguments.cpp  VirtualDestructor.cpp  advanced_virtual_constructor.cpp  android_alarm.h  (+29 more)
src/algo/: dynamic_programming.cpp
src/aosp_libutils/: CallStack.cpp  Looper.cpp  RefBase.cpp  SharedBuffer.cpp  StrongPointer.cpp  SystemClock.cpp  Threads.cpp  Timers.cpp  Unicode.cpp  VectorImpl.cpp
src/aosp_libutils/include/: AndroidThreads.h  CallStack.h  Debug.h  Errors.h  FileMap.h  Functor.h  KeyedVector.h  Log.h  Looper.h  LruCache.h  Mutex.h  Printer.h  RWLock.h  RefBase.h  Singleton.h  SortedVector.h  StopWatch.h  String16.h  String8.h  StrongPointer.h  SystemClock.h  Thread.h  ThreadDefs.h  Tokenizer.h  TypeHelpers.h  Unicode.h  Vector.h  VectorImpl.h  macros.h  misc.h  unique_fd.h
src/aosp_libutils_test/: LooperTest.cpp  TestHelper.h
src/beta_looper/: BetaLooper.cpp  Looper.h  Timers.cpp
src/boost_dev/: BoostTest.cpp  CMakeLists.txt
src/c_queue/: Queue.cpp  Queue.h  list.h  queue_test.cpp
src/callback_del/: Callback.h  Child.cpp  Child.h  ManageTest.cpp  Manager.cpp  Manager.h
src/class_internal/: ClassInternalFeature.cpp
src/competive_tricks/: CheckEvenOrOdd.cpp  README.md
src/concurrent/adasplus_concurrent_util/: CmdThread.cpp  CmdThread.h  ConcurrentTest.cpp  Mutex.h  Queue.cpp  Queue.h  Thread.cpp  Thread.h  list.h  log.h  sem.h
src/cpp_17/: string_view_adventure.cpp
src/cpp_functional/: StdFunctionalTest.cpp  bind_func.cpp  function.cpp
src/detail_devil/: LenTest.cpp  ListOp.cpp  SimpleArrTest.cpp  TimeRange.cpp  TypeConversion.cpp  VectorTest.cpp
src/devil_detect/: NestCls.cpp
src/fileobserver/: FileObserverUser.cpp  TerminalFileObserver.cpp  TerminalFileObserver.h
src/io_operation/: BinaryFileOp.cpp  BinaryFileOperation.md  basic_file_op.cpp
src/json_test/: CMakeLists.txt  README.md  json11.cpp  test.cpp  test2.cpp
src/kv_store/: TerminalDB.cpp  TerminalDB.h
src/kv_store/algo/: coding.cpp  coding.h  endian.cc  endian.h
src/kv_store/util/: byte_array.h  config_parser.h  file.h  filepool.h  logger.cc  logger.h  options.h  order.h  status.cc  status.h  version.h
src/lambda_adventure/: LambdaAdventure.cpp
src/linux_process/: fork_and_buffer.cpp  process_manage.cpp  size_of_impl.cpp
src/linux_system_programming/: README.md
src/memory_manage/unique_ptr/: README.md  unique_ptr_adventure.cpp
src/oop_design/: PolyphismTricks.cpp  README.md
src/oop_design/interface/: IClientDataListener.h  InterfaceTest.cpp  ResponseHandler.cpp  ResponseHandler.h
src/pure_c_adventure/: README.md
src/simple_char_encode/: ChineseCharEncode.cpp
src/simple_kv/: SimpleKVTest.cpp
src/simple_looper/: Epoll.cpp  Epoll.h  SimpleLooper.cpp
src/stl/: array_algorithm.cpp  copy_vector.cpp  list_operation.cpp  map_op.cpp  nested_list_operation.cpp  struct_list.cpp
src/system_misc/: DateNTime.cpp
src/test_sp/: Atomic-x86.h  README.md  RefBase.cpp  RefBase.h  StrongPointer.h  log.h
src/test_sp/test/: apple.h  main.cpp
src/timers/: TimerExample.cpp  Timers.cpp  Timers.h
test_dir/: cpu_usage
